/**
 * generated by Xtext 2.38.0
 */
package org.xtext.example.mydsl.myDsl.impl;

import org.eclipse.emf.common.notify.Notification;

import org.eclipse.emf.ecore.EClass;

import org.eclipse.emf.ecore.impl.ENotificationImpl;

import org.xtext.example.mydsl.myDsl.Action;
import org.xtext.example.mydsl.myDsl.MyDslPackage;

/**
 * <!-- begin-user-doc -->
 * An implementation of the model object '<em><b>Action</b></em>'.
 * <!-- end-user-doc -->
 * <p>
 * The following features are implemented:
 * </p>
 * <ul>
 *   <li>{@link org.xtext.example.mydsl.myDsl.impl.ActionImpl#getActionType <em>Action Type</em>}</li>
 *   <li>{@link org.xtext.example.mydsl.myDsl.impl.ActionImpl#getInputOutput <em>Input Output</em>}</li>
 *   <li>{@link org.xtext.example.mydsl.myDsl.impl.ActionImpl#getEnergyUsage <em>Energy Usage</em>}</li>
 * </ul>
 *
 * @generated
 */
public class ActionImpl extends EntityImpl implements Action
{
  /**
   * The default value of the '{@link #getActionType() <em>Action Type</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getActionType()
   * @generated
   * @ordered
   */
  protected static final String ACTION_TYPE_EDEFAULT = null;

  /**
   * The cached value of the '{@link #getActionType() <em>Action Type</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getActionType()
   * @generated
   * @ordered
   */
  protected String actionType = ACTION_TYPE_EDEFAULT;

  /**
   * The default value of the '{@link #getInputOutput() <em>Input Output</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getInputOutput()
   * @generated
   * @ordered
   */
  protected static final String INPUT_OUTPUT_EDEFAULT = null;

  /**
   * The cached value of the '{@link #getInputOutput() <em>Input Output</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getInputOutput()
   * @generated
   * @ordered
   */
  protected String inputOutput = INPUT_OUTPUT_EDEFAULT;

  /**
   * The default value of the '{@link #getEnergyUsage() <em>Energy Usage</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getEnergyUsage()
   * @generated
   * @ordered
   */
  protected static final String ENERGY_USAGE_EDEFAULT = null;

  /**
   * The cached value of the '{@link #getEnergyUsage() <em>Energy Usage</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getEnergyUsage()
   * @generated
   * @ordered
   */
  protected String energyUsage = ENERGY_USAGE_EDEFAULT;

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  protected ActionImpl()
  {
    super();
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  protected EClass eStaticClass()
  {
    return MyDslPackage.Literals.ACTION;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String getActionType()
  {
    return actionType;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void setActionType(String newActionType)
  {
    String oldActionType = actionType;
    actionType = newActionType;
    if (eNotificationRequired())
      eNotify(new ENotificationImpl(this, Notification.SET, MyDslPackage.ACTION__ACTION_TYPE, oldActionType, actionType));
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String getInputOutput()
  {
    return inputOutput;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void setInputOutput(String newInputOutput)
  {
    String oldInputOutput = inputOutput;
    inputOutput = newInputOutput;
    if (eNotificationRequired())
      eNotify(new ENotificationImpl(this, Notification.SET, MyDslPackage.ACTION__INPUT_OUTPUT, oldInputOutput, inputOutput));
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String getEnergyUsage()
  {
    return energyUsage;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void setEnergyUsage(String newEnergyUsage)
  {
    String oldEnergyUsage = energyUsage;
    energyUsage = newEnergyUsage;
    if (eNotificationRequired())
      eNotify(new ENotificationImpl(this, Notification.SET, MyDslPackage.ACTION__ENERGY_USAGE, oldEnergyUsage, energyUsage));
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public Object eGet(int featureID, boolean resolve, boolean coreType)
  {
    switch (featureID)
    {
      case MyDslPackage.ACTION__ACTION_TYPE:
        return getActionType();
      case MyDslPackage.ACTION__INPUT_OUTPUT:
        return getInputOutput();
      case MyDslPackage.ACTION__ENERGY_USAGE:
        return getEnergyUsage();
    }
    return super.eGet(featureID, resolve, coreType);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void eSet(int featureID, Object newValue)
  {
    switch (featureID)
    {
      case MyDslPackage.ACTION__ACTION_TYPE:
        setActionType((String)newValue);
        return;
      case MyDslPackage.ACTION__INPUT_OUTPUT:
        setInputOutput((String)newValue);
        return;
      case MyDslPackage.ACTION__ENERGY_USAGE:
        setEnergyUsage((String)newValue);
        return;
    }
    super.eSet(featureID, newValue);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void eUnset(int featureID)
  {
    switch (featureID)
    {
      case MyDslPackage.ACTION__ACTION_TYPE:
        setActionType(ACTION_TYPE_EDEFAULT);
        return;
      case MyDslPackage.ACTION__INPUT_OUTPUT:
        setInputOutput(INPUT_OUTPUT_EDEFAULT);
        return;
      case MyDslPackage.ACTION__ENERGY_USAGE:
        setEnergyUsage(ENERGY_USAGE_EDEFAULT);
        return;
    }
    super.eUnset(featureID);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public boolean eIsSet(int featureID)
  {
    switch (featureID)
    {
      case MyDslPackage.ACTION__ACTION_TYPE:
        return ACTION_TYPE_EDEFAULT == null ? actionType != null : !ACTION_TYPE_EDEFAULT.equals(actionType);
      case MyDslPackage.ACTION__INPUT_OUTPUT:
        return INPUT_OUTPUT_EDEFAULT == null ? inputOutput != null : !INPUT_OUTPUT_EDEFAULT.equals(inputOutput);
      case MyDslPackage.ACTION__ENERGY_USAGE:
        return ENERGY_USAGE_EDEFAULT == null ? energyUsage != null : !ENERGY_USAGE_EDEFAULT.equals(energyUsage);
    }
    return super.eIsSet(featureID);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String toString()
  {
    if (eIsProxy()) return super.toString();

    StringBuilder result = new StringBuilder(super.toString());
    result.append(" (actionType: ");
    result.append(actionType);
    result.append(", inputOutput: ");
    result.append(inputOutput);
    result.append(", energyUsage: ");
    result.append(energyUsage);
    result.append(')');
    return result.toString();
  }

} //ActionImpl
