/**
 * generated by Xtext 2.38.0
 */
package org.xtext.example.mydsl.myDsl.impl;

import org.eclipse.emf.common.notify.Notification;

import org.eclipse.emf.ecore.EClass;

import org.eclipse.emf.ecore.impl.ENotificationImpl;

import org.xtext.example.mydsl.myDsl.MissionEvent;
import org.xtext.example.mydsl.myDsl.MyDslPackage;

/**
 * <!-- begin-user-doc -->
 * An implementation of the model object '<em><b>Mission Event</b></em>'.
 * <!-- end-user-doc -->
 * <p>
 * The following features are implemented:
 * </p>
 * <ul>
 *   <li>{@link org.xtext.example.mydsl.myDsl.impl.MissionEventImpl#getEventType <em>Event Type</em>}</li>
 *   <li>{@link org.xtext.example.mydsl.myDsl.impl.MissionEventImpl#getImpactLevel <em>Impact Level</em>}</li>
 *   <li>{@link org.xtext.example.mydsl.myDsl.impl.MissionEventImpl#getResponseAction <em>Response Action</em>}</li>
 * </ul>
 *
 * @generated
 */
public class MissionEventImpl extends EntityImpl implements MissionEvent
{
  /**
   * The default value of the '{@link #getEventType() <em>Event Type</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getEventType()
   * @generated
   * @ordered
   */
  protected static final String EVENT_TYPE_EDEFAULT = null;

  /**
   * The cached value of the '{@link #getEventType() <em>Event Type</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getEventType()
   * @generated
   * @ordered
   */
  protected String eventType = EVENT_TYPE_EDEFAULT;

  /**
   * The default value of the '{@link #getImpactLevel() <em>Impact Level</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getImpactLevel()
   * @generated
   * @ordered
   */
  protected static final int IMPACT_LEVEL_EDEFAULT = 0;

  /**
   * The cached value of the '{@link #getImpactLevel() <em>Impact Level</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getImpactLevel()
   * @generated
   * @ordered
   */
  protected int impactLevel = IMPACT_LEVEL_EDEFAULT;

  /**
   * The default value of the '{@link #getResponseAction() <em>Response Action</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getResponseAction()
   * @generated
   * @ordered
   */
  protected static final String RESPONSE_ACTION_EDEFAULT = null;

  /**
   * The cached value of the '{@link #getResponseAction() <em>Response Action</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getResponseAction()
   * @generated
   * @ordered
   */
  protected String responseAction = RESPONSE_ACTION_EDEFAULT;

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  protected MissionEventImpl()
  {
    super();
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  protected EClass eStaticClass()
  {
    return MyDslPackage.Literals.MISSION_EVENT;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String getEventType()
  {
    return eventType;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void setEventType(String newEventType)
  {
    String oldEventType = eventType;
    eventType = newEventType;
    if (eNotificationRequired())
      eNotify(new ENotificationImpl(this, Notification.SET, MyDslPackage.MISSION_EVENT__EVENT_TYPE, oldEventType, eventType));
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public int getImpactLevel()
  {
    return impactLevel;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void setImpactLevel(int newImpactLevel)
  {
    int oldImpactLevel = impactLevel;
    impactLevel = newImpactLevel;
    if (eNotificationRequired())
      eNotify(new ENotificationImpl(this, Notification.SET, MyDslPackage.MISSION_EVENT__IMPACT_LEVEL, oldImpactLevel, impactLevel));
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String getResponseAction()
  {
    return responseAction;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void setResponseAction(String newResponseAction)
  {
    String oldResponseAction = responseAction;
    responseAction = newResponseAction;
    if (eNotificationRequired())
      eNotify(new ENotificationImpl(this, Notification.SET, MyDslPackage.MISSION_EVENT__RESPONSE_ACTION, oldResponseAction, responseAction));
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public Object eGet(int featureID, boolean resolve, boolean coreType)
  {
    switch (featureID)
    {
      case MyDslPackage.MISSION_EVENT__EVENT_TYPE:
        return getEventType();
      case MyDslPackage.MISSION_EVENT__IMPACT_LEVEL:
        return getImpactLevel();
      case MyDslPackage.MISSION_EVENT__RESPONSE_ACTION:
        return getResponseAction();
    }
    return super.eGet(featureID, resolve, coreType);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void eSet(int featureID, Object newValue)
  {
    switch (featureID)
    {
      case MyDslPackage.MISSION_EVENT__EVENT_TYPE:
        setEventType((String)newValue);
        return;
      case MyDslPackage.MISSION_EVENT__IMPACT_LEVEL:
        setImpactLevel((Integer)newValue);
        return;
      case MyDslPackage.MISSION_EVENT__RESPONSE_ACTION:
        setResponseAction((String)newValue);
        return;
    }
    super.eSet(featureID, newValue);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void eUnset(int featureID)
  {
    switch (featureID)
    {
      case MyDslPackage.MISSION_EVENT__EVENT_TYPE:
        setEventType(EVENT_TYPE_EDEFAULT);
        return;
      case MyDslPackage.MISSION_EVENT__IMPACT_LEVEL:
        setImpactLevel(IMPACT_LEVEL_EDEFAULT);
        return;
      case MyDslPackage.MISSION_EVENT__RESPONSE_ACTION:
        setResponseAction(RESPONSE_ACTION_EDEFAULT);
        return;
    }
    super.eUnset(featureID);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public boolean eIsSet(int featureID)
  {
    switch (featureID)
    {
      case MyDslPackage.MISSION_EVENT__EVENT_TYPE:
        return EVENT_TYPE_EDEFAULT == null ? eventType != null : !EVENT_TYPE_EDEFAULT.equals(eventType);
      case MyDslPackage.MISSION_EVENT__IMPACT_LEVEL:
        return impactLevel != IMPACT_LEVEL_EDEFAULT;
      case MyDslPackage.MISSION_EVENT__RESPONSE_ACTION:
        return RESPONSE_ACTION_EDEFAULT == null ? responseAction != null : !RESPONSE_ACTION_EDEFAULT.equals(responseAction);
    }
    return super.eIsSet(featureID);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String toString()
  {
    if (eIsProxy()) return super.toString();

    StringBuilder result = new StringBuilder(super.toString());
    result.append(" (eventType: ");
    result.append(eventType);
    result.append(", impactLevel: ");
    result.append(impactLevel);
    result.append(", responseAction: ");
    result.append(responseAction);
    result.append(')');
    return result.toString();
  }

} //MissionEventImpl
